samples/_failures_safe/1761448009_502de2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3904e11.c: In function ‘main’:
./samples/SAFE/__tmp_e3904e11.c:165:20: error: missing terminating " character
  165 |             printf("S
      |                    ^~
./samples/SAFE/__tmp_e3904e11.c:165:13: error: expected expression at end of input
  165 |             printf("S
      |             ^~~~~~
./samples/SAFE/__tmp_e3904e11.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e3904e11.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e3904e11.c:165:13: error: expected declaration or statement at end of input
